SERVER-48334 numIndexesTotal should only rethrow WriteConflictExceptions in a WriteUnitOfWork

(cherry picked from commit ba18ad9536295e1f8ff9a4e90701f271e38e6b19)